k8s/backend.yml
apiVersion: v1
kind: Service
metadata:
  name: conote-backend
  labels:
    app: conote
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: conote
    tier: backend
  ports:
    - port: 3000
      targetPort: http-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conote-backend
  labels:
    app: conote
    tier: backend
spec:
  replicas: 1 # No. of replicas/pods to run in this deployment
  selector:
    matchLabels: # The deployment applies to any pods mayching the specified labels
      app: conote
      tier: backend
  template: # Template for creating the pods in this deployment
    metadata:
      labels: # Labels that will be applied to each Pod in this deployment
        app: conote
        tier: backend
    spec: # Spec for the containers that will be run in the Pods
      containers:
        - name: backend
          image: conote-backend
          command: ['/bin/sh', '-c']
          args: ['yarn run migrate && yarn run seed && yarn run start']
          ports:
            - name: http-server
              containerPort: 3000 # The port that the container exposes
