k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: conote-ingress
  annotations:
    dev.okteto.com/generate-host: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: conote-backend
              servicePort: 3000
          # - path: /
          #   backend:
          #     serviceName: conote-frontend
          #     servicePort: 80
